more HTML validation fixes

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block title %}Swing Paints - About{% endblock %}
-{% block category %}<img src="{{ url_for('static', filename='about_swing_top.png') }}" WIDTH=590 HEIGHT=29>{% endblock %}
+{% block category %}<img src="{{ url_for('static', filename='about_swing_top.png') }}" alt="About Swing Paints" width=590 height=29>{% endblock %}
 {% block content %}
-<p align="justify" style="background:url({{ url_for('static', filename='about_bk.jpg') }});background-repeat:no-repeat;font-size:10px;width:580px;height:282px;margin-top:0px">
+<p style="background:url({{ url_for('static', filename='about_bk.jpg') }});background-repeat:no-repeat;font-size:10px;width:580px;height:282px;margin-top:0px;text-align:justify">
 Swing Paints Limited is a family-owned business that has been operating in Canada since 1965. The company's manufacturing is concentrated on a site in Montreal adjacent to the Lachine Canal, a historic industrial location. Swing Paints currently distributes throughout Canada, the United States, the United Kingdom, and Ireland.
 <br /><br />
 Swing Paints is the largest producer of conventional and environmentally safe paint and varnish removers in Canada, including products for the consumer/DIY, the refinishing trade, and industrial use. Swing Paints is the largest Canadian manufacturer of wood finishing products.
