--- a/templates/frenchabout.html
+++ b/templates/frenchabout.html
@@ -1,6 +1,6 @@
 {% extends "frenchbase.html" %}
 {% block title %}Peinture Swing - Profil{% endblock %}
-{% block category %}<img src="{{ url_for('static', filename='french_about_swing_top.png') }}" WIDTH=590 HEIGHT=29>{% endblock %}
+{% block category %}<img src="{{ url_for('static', filename='french_about_swing_top.png') }}" width=590 height=29>{% endblock %}
 {% block content %}
 <p align="justify" style="background:url({{ url_for('static', filename='about_bk.jpg') }});background-repeat:no-repeat;font-size:10px;width:580px;height:282px;margin-top:0px">
 Les Peintures Swing limitée, est une compagnie familiale qui est établie au Canada depuis 1965. La compagnie manufacturière est localisée sur l'île de Montréal adjacent le canal Lachine, où l'on retrouve l'histoire industrielle. Les Peintures Swing distribue présentement à travers le Canada, les États-Unis, la Grande Bretagne et l'Irlande.
