--- a/templates/frenchmain.html
+++ b/templates/frenchmain.html
@@ -1,4 +1,4 @@
 {% extends "frenchbase.html" %}
 {% block title %}Peintures Swing - Acceuil{% endblock %}
 {% block category %}{% endblock %}
-{% block content %}<img src="{{ url_for('static', filename='mainbg.jpg') }}" width="590">{% endblock %}
+{% block content %}<img src="{{ url_for('static', filename='mainbg.jpg') }}" alt="Peintures Swing Acceuil" width="590">{% endblock %}
