--- a/templates/main.html
+++ b/templates/main.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %}
 {% block title %}Swing Paints - Home{% endblock %}
 {% block category %}{% endblock %}
-{% block content %}<img src="{{ url_for('static', filename='mainbg.jpg') }}" width="590">{% endblock %}
+{% block content %}<img src="{{ url_for('static', filename='mainbg.jpg') }}" alt="Swing Paints Main" width="590">{% endblock %}
