--- a/templates/frenchmarketing.html
+++ b/templates/frenchmarketing.html
@@ -1,7 +1,7 @@
 {% extends "frenchbase.html" %}
 {% block head %}{{ super() }}<style>b {color:#1D432F;}</style>{% endblock %}
 {% block title %}Peintures Swing - Marketing{% endblock %}
-{% block category %}<img src="{{ url_for('static', filename='french_marketing_top.png') }}" WIDTH=590 HEIGHT=29>{% endblock %}
+{% block category %}<img src="{{ url_for('static', filename='french_marketing_top.png') }}" width=590 height=29>{% endblock %}
 {% block content %}
 <p style="margin-top:0px;text-align:left;font-size:10px;font-family:Verdana,Arial,Helvetica,sans-serif">
 <b>Promotions</b><br />
