--- a/templates/frenchmarketing.html
+++ b/templates/frenchmarketing.html
@@ -1,9 +1,9 @@
 {% extends "frenchbase.html" %}
-{% block head %}{{ super() }}<style>b {color:#1D432F;}</style>{% endblock %}
+{% block head %}{{ super() }}<style>div#content b {color:#1D432F;}div#content p {margin-top:0px;font-size:10px;}</style>{% endblock %}
 {% block title %}Peintures Swing - Marketing{% endblock %}
-{% block category %}<img src="{{ url_for('static', filename='french_marketing_top.png') }}" width=590 height=29>{% endblock %}
+{% block category %}<img src="{{ url_for('static', filename='french_marketing_top.png') }}" alt="Peintures Swing Marketing" width=590 height=29>{% endblock %}
 {% block content %}
-<p style="margin-top:0px;text-align:left;font-size:10px;font-family:Verdana,Arial,Helvetica,sans-serif">
+<p>
 <b>Promotions</b><br />
 Les Peintures Swing émet constamment des communiqués de presse 
 au commerce au sujet de ses nouveaux produits innovateurs Aussi 
@@ -11,36 +11,36 @@ bien, la publicité dans les publications dirigées vers le marché
 et le consommateur tout au long de l'année aide à maintenir nos 
 noms de marque fortement visibles. Les Peintures Swing offre également 
 des classes de finition aux consommateurs et au représentants 
-commerciales.<br />
-<br />
+commerciales.</p>
+<p>
 <b>Matériaux d'achat</b><br />
 Les Peintures Swing offre une variété de brochures, échantillons, 
 causeurs d'étagère, signes, bons de remise et d'autres matériaux 
-pour aider à la vente des produits.<br />
-<br />
+pour aider à la vente des produits.</p>
+<p>
 <b>Photos et litérature</b><br />
 Des photos à 4-couleurs sont à votre disposition pour favoriser 
 la ligne des Peintures Swing. L'information technique couvre le 
 détail du préparation et des utilisations de notre ligne complète 
-pour aider à votre vente.<br />
-<br />
+pour aider à votre vente.</p>
+<p>
 <b></b><br />
 Pour obtenir les fiches techniques Matérielles de Sûreté, s'il vous plait
 envoyer un fax sur l'en-tête de lettre de compagnie au bureau chef à Montreal.
 Les fiches techniques Matérielles de Sûreté sont disponibles sur 
-notre ligne complète sur demande.><br />
-<br />
+notre ligne complète sur demande.></p>
+<p>
 <b>Service à la clientèle</b><br />
 Notre équipe de représentants qualifiés sont prêt à vous aider 
 de n'importe quel façon possible. Chacun a des années d'expérience 
 dans le domaine de la finition. Les Peintures Swing offre également 
 des classes de finition aux consommateurs et au représentants 
-commerciales. <br />
-<br />
+commerciales. </p>
+<p>
 <b>Publicité Co-op</b><br />
 Contacter votre représentant de ventes ou le service à la clientèle 
-pour l'information sur la publicité Co-op.<br />
-<br />
+pour l'information sur la publicité Co-op.</p>
+<p>
 <b>Conditionnement </b><br />
 Nous travaillons constamment pour vous assurer que le regard de 
 l'EXTÉRIEUR de notre produit apparie la qualité du produit contenu 
