--- a/templates/marketing.html
+++ b/templates/marketing.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
-{% block head %}{{ super() }}<style>b {color:#1D432F;}</style>{% endblock %}
+{% block head %}{{ super() }}<style>div#content b {color:#1D432F;}div#content p {margin-top:0px;font-size:10px;}</style>{% endblock %}
 {% block title %}Swing Paints - Marketing{% endblock %}
-{% block category %}<img src="{{ url_for('static', filename='marketing_top.png') }}" width=590 height=29>{% endblock %}
+{% block category %}<img src="{{ url_for('static', filename='marketing_top.png') }}" alt="Swing Paints Marketing" width=590 height=29>{% endblock %}
 {% block content %}
-<p style="margin-top:0px;text-align:left;font-size:10px;font-family:Verdana,Arial,Helvetica,sans-serif">
+<p>
 <b>Promotions</b><br />
 Swing Paints is constantly issuing press releases to the trade 
 concerning its new and innovative products. As well, both trade 
@@ -11,39 +11,39 @@ and consumer print ads run throughout the year to help keep our
 brand names highly visible. Swing Paints also participates in 
 a variety of trade shows and woodworking shows across Canada, 
 the United States and the UK. Swing Paints is also the proud sponsor 
-of The Kids Corner at the Canadian Home Workshop Show. <br />
-<br />
+of The Kids Corner at the Canadian Home Workshop Show.</p>
+<p>
 <b>Point of Purchase</b><br />
 Materials Swing Paints offers a variety of take-away brochures, 
 sample boards, shelf talkers, header signs, rebate coupons and 
-other materials to assist in the product sale.<br />
-<br />
+other materials to assist in the product sale.</p>
+<p>
 <b>Photos & Literature</b> <br />
 A complete set of 4-colour photos is available to you to promote 
 the Swing Paints line. Product information sheets detail the preparation 
-and uses of our complete line to assist in your sale.<br />
-<br />
+and uses of our complete line to assist in your sale.</p>
+<p>
 <b>MSDS</b><br />
 Material Safety Data Sheets are available on our complete line 
 upon request.  <a href="mailto:info@swingpaints.com">Request MSDS</a>
-<br />
-<br />
+</p>
+<p>
 <b>Sales Support and Customer Service</b><br />
 Our team of trained representatives is ready and able to assist 
 you in any way possible. Each one has years of experience in the 
 coatings field. Swing Paints also offers refinishing classes to 
-both the trade and consumers. <br />
-<br />
+both the trade and consumers. </p>
+<p>
 <b>Co-op Advertising</b><br />
 Contact your sales representative or the customer service department 
-for the latest information on Co-op advertising.<br />
-<br />
+for the latest information on Co-op advertising.</p>
+<p>
 <b>Packaging</b><br />
 We are always working to make sure that the OUTSIDE look of our 
 product line matches the quality of the product contained INSIDE. 
 As well, we are continuously updating instructions and information 
-on products to make them extremely consumer-friendly.<br />
-<br />
+on products to make them extremely consumer-friendly.</p>
+<p>
 <b>Private Label Options</b><br />
 All products manufactured by Swing Paints are available for private label. No minimums required - 1 case or 100 cases.
 Our in-house design group will work closely with you to achieve the professional look you need.
