more HTML validation fixes

--- a/templates/category.html
+++ b/templates/category.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block head %}{{ super() }}<style>div#content td {font-size:10px;width:112px;text-align:center;}</style>{% endblock %}
 {% block title %}{{ category.title | safe }}{% endblock %}
-{% block category %}<img src="{{ url_for('static', filename=category.img) }}" alt="CATEGORY WHENEVER I DO THIS" width=590 height=29>{% endblock %}
+{% block category %}<img src="{{ url_for('static', filename=category.img) }}" alt="{{ category.title | safe }}" width=590 height=29>{% endblock %}
 {% block content %}
 <table><tr>
 {% for x in category.products: %}
