--- a/templates/about.html
+++ b/templates/about.html
@@ -1,14 +1,15 @@
 {% extends "base.html" %}
+{% block head %}{{ super() }}<style>div#content p {margin-top:0px;font-size:10px;}</style>{% endblock %}
 {% block title %}Swing Paints - About{% endblock %}
 {% block category %}<img src="{{ url_for('static', filename='about_swing_top.png') }}" alt="About Swing Paints" width=590 height=29>{% endblock %}
 {% block content %}
-<p style="background:url({{ url_for('static', filename='about_bk.jpg') }});background-repeat:no-repeat;font-size:10px;width:580px;height:282px;margin-top:0px;text-align:justify">
+<div style="background:url({{ url_for('static', filename='about_bk.jpg') }});background-repeat:no-repeat;width:580px;height:282px;"><p>
 Swing Paints Limited is a family-owned business that has been operating in Canada since 1965. The company's manufacturing is concentrated on a site in Montreal adjacent to the Lachine Canal, a historic industrial location. Swing Paints currently distributes throughout Canada, the United States, the United Kingdom, and Ireland.
-<br /><br />
+</p><p>
 Swing Paints is the largest producer of conventional and environmentally safe paint and varnish removers in Canada, including products for the consumer/DIY, the refinishing trade, and industrial use. Swing Paints is the largest Canadian manufacturer of wood finishing products.
-<br /><br />
+</p><p>
 Circa 1850 and Gaudreault Antiques are nationally-known brands that include stains, varnishes, floor polyurethanes, polishes, cleaners  and removers.
-<br /><br />
+</p><p>
 Swing Paints manufactures universal and stain-blocking primers for use as paint primers and wallpaper prep-coats. All primers are water-based, low odour and can be used for interior and exterior applications.<br /><br />The company manufactures specialty epoxy coatings. A two-component brush-on epoxy is a consumer/DIY product for repainting bathtubs, tiles, and sinks. A two-component spray epoxy, with two-component primer, is designed for commercial tub reglazers and appliance repairs, as well as for food preparation areas. A two-component high-build (extremely thick) clear epoxy is used for arts and craft, displays and for commercial restaurant and bar tables.
-</p>
+</p></div>
 {% endblock %}
