french HTML validation closes #17

--- a/templates/frenchabout.html
+++ b/templates/frenchabout.html
@@ -3,7 +3,7 @@
 {% block title %}Peinture Swing - Profil{% endblock %}
 {% block category %}<img src="{{ url_for('static', filename='french_about_swing_top.png') }}" alt="Peinture Swing Profil" width=590 height=29>{% endblock %}
 {% block content %}
-<div style="background:url({{ url_for('static', filename='about_bk.jpg') }});background-repeat:no-repeat;width:580px;height:282px;"><p>
+<div style="background:url({{ url_for('static', filename='about_bk.jpg') }});background-repeat:no-repeat;width:580;height:282;"><p>
 Les Peintures Swing limitée, est une compagnie familiale qui est établie au Canada depuis 1965. La compagnie manufacturière est localisée sur l'île de Montréal adjacent le canal Lachine, où l'on retrouve l'histoire industrielle. Les Peintures Swing distribue présentement à travers le Canada, les États-Unis, la Grande Bretagne et l'Irlande.
 </p><p>
 Les Peintures Swing est le plus grosse compagnie conventionnelle et environnementale qui produit de la peinture et du dissolvant de vernis sans aucun danger, au Canada, incluant des produits pour le client / DIY, la finition de métier et d'usage industriel. Les Peintures Swing est la plus grosse compagnie manufacturière au Canada pour la finition de bois.
