fixed french product layout - closes #4

--- a/templates/frenchbase.html
+++ b/templates/frenchbase.html
@@ -35,7 +35,7 @@
 		<div id="sidebar">
 		{% block sidebar %}
 			<img src="{{ url_for('static', filename='categoryswing.png') }}" alt="Swing Paints Sidebar" width="159" height="69"><br />
-			<i style="font-size:9px;color:#FFFF00">NOUVEAU&nbsp;</i>
+			<i style="font-size:9;color:#FFFF00">NOUVEAU&nbsp;</i>
 			<a href="/category/nontoxic?french">Produits Non-Toxiques</a><br />&#183;<br />
 			<a href="/category/oils?french">Huiles de Finition</a><br />&#183;<br />
 			<a href="/category/poly?french">Huiles, Vernis &amp; Polyur&#xe9;thanes</a><br />&#183;<br />
