--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block head %}{{ super() }}<style>div#greenlink a:link{color:#1D432F;text-decoration:underline;}div#greenlink a:visited{color:#1D432F;text-decoration:underline;}div#greenlink a:active{color:#1D432F;text-decoration:underline;}div#greenlink{font-size:11px}</style>{% endblock %}
+{% block head %}{{ super() }}<style>div#greenlink a:link{color:#1D432F;text-decoration:underline;}div#greenlink{font-size:11px}</style>{% endblock %}
 {% block title %}Swing Paints - Contact Us{% endblock %}
 {% block category %}<img src="{{ url_for('static', filename='contact_swing_top.png') }}" alt="Contact Swing Paints" width=590 height=29>{% endblock %}
 {% block content %}
