FAQ jQuery magic to close #11

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -1,17 +1,49 @@
 {% extends "base.html" %}
-{% block head %}{{ super() }}<style>div#content a {text-decoration:underline;color:#1D432F;}div#content,div#content p{font-size:11px;}div#content li{margin:10px 0}</style>{% endblock %}
+{% block head %}
+{{ super() }}
+<style>
+	div#content a {text-decoration:underline;color:#1D432F;}
+	div#content,div#content p{font-size:11px;}
+	div#content li{margin:10px 0}
+</style>
+<script type='text/javascript'>
+$(document).ready(function(){
+	$(".faq").click(function(){
+		$(this).siblings().children().not("a").slideUp("slow");
+		$(this).children().not("a").slideToggle("slow");
+	});
+});
+</script>{% endblock %}
 {% block title %}Swing Paints - FAQ{% endblock %}
 {% block category %}<img src="{{ url_for('static', filename='faq_top.png') }}" alt="Swing Paints FAQ" width=590 height=29>{% endblock %}
 {% block content %}
 <p>Don&apos;t see the topic you're looking for? Do you have a question of your own to post? Please refer to our <a href="http://www.swingpaints.com/forum.asp">INTERACTIVE FORUM</a> where other do-it-yourselfers and professionals alike share their expertise.</p>
-<ol>
-	<li><a href="/faq/1">What is the best stripper to use to remove paint?</a></li>
-	<li><a href="a_faq2.htm">What is the Plus in Prime-it Plus?</a></li>
-	<li><a href="a_faq3.htm">Why should I use Stain'n Varnish instead of staining and varnishing?</a></li>
-	<li><a href="a_faq4.htm">How do you repair cigarette burns?</a></li>
-	<li><a href="a_faq5.htm">How do you solve the problem of a squeaky rocking chair?</a></li>
-	<li><a href="a_faq6.htm">Should veneer be repaired before or after stripping?</a></li>
-	<li><a href="a_faq7.htm">What is the best means for removing a modern polyurethane finish?</a></li>
-	<li><a href="a_faq8.htm">What can I do about the tiny bumps I get in my finish after I varnish?</a></li>
-</ol>
+<ul>
+	<li class="faq"><a href="#">What is the best stripper to use to remove paint?</a>
+		<div style="display:none"><p>There are three factors that determine the most appropriate paint stripper: type of paint, type of surface, location. Circa 1850 Furniture Stripper works best on most paints and clear finishes (varnishes, polyurethanes, lacquers). Its liquid formula is preferred for clear finishes and intricate surfaces. Circa 1850 Heavy Body Remover is a gel-type stripper that works best on tough, multiple layers of paint, exterior surfaces such as houses and boats. Its cling formula is ideal for walls and moldings. Circa 1850 Soft Strip is a biodegradable environmentally-friendly remover. Its pleasant odour is ideal for interior use, while its slow evaporation make it perfect for exterior use. It is very effective on latex and epoxy finishes.</p>
+		<p>Gaudrault Antiques Removers (Brush-on, Heavy Body and Stay-Wet) are economical alternatives to the Circa 1850 products. Gaudrault Antiques Removers are slightly slower acting and require more applications to remove multiple layers of paint.</p>
+		<p>Swing Professional Removers (Flo, Liquid and Gel) are formulated for professional use only.</p></div>
+	</li>
+	<li class="faq"><a href="#">What is the Plus in Prime-it Plus?</a>
+		<div style="display:none"><p>Prime-it is a universal primer that is perfect for conventional applications: sealing porous surfaces such as new drywall, deglossing shiny surfaces, eliminating flashing, enabling latex to oil and oil to latex conversion. Prime-it Plus does all that and more. It blocks out most stains, such as oil, marker, smoke and water. It also prevents the resins of cedar, redwood and plywood from bleeding through. Prime-it Plus will also adhere to chalky surfaces that are normally impossible to paint. It is a real problem solver.</p></div>
+	</li>
+	<li class="faq"><a href="#">Why should I use Stain'n Varnish instead of staining and varnishing?</a>
+		<div style="display:none"><p>Circa 1850 Stain'n Varnish is a gel combination of stain and varnish. The gel makes it ideal for staining soft woods, such as pine and birch, because it produces a very uniform colour. The varnish allows you to apply Circa 1850 Stain'n Varnish to any surface: wood, plastic, metal, masonite, composite, etc. It is the best way to give non-wood surfaces, such as embossed composite doors, a real wood look. And because it is transparent, a thin coat of a contrasting colour of Circa 1850 Stain'n Varnish over an existing colour can be used to give wood an antique, distressed, or faux finish.</p></div>
+	</li>
+	<li class="faq"><a href="#">How do you repair cigarette burns?</a>
+		<div style="display:none"><p>You will find that when you strip the finish off, most of the burn damage comes off as well. What is left should be carefully scraped away with a single-edged razor blade. Burns can be taken care of this way without any extra treatment, but difficult cases will require some additional work. If the burn is deep you are going to have a depression to fill after you clean out all the charred wood. You can choose from three materials designed to build up missing wood: melt-in sticks, wood dough or wood. Melt-in sticks come in a variety of colors, as does wood dough, but neither matches wood grain as well as actual wood or a slice of veneer to fit the crevice, gluing it in and sanding it flush later. Some see that as extra work but the result is far more satisfying than with the other two alternatives.</p></div>
+	</li>
+	<li class="faq"><a href="#">How do you solve the problem of a squeaky rocking chair?</a>
+		<div style="display:none"><p>The squeaking is probably caused by the rubbing of one of the legs inside the hole in the runner. The old glue has probably failed and the joint is slightly loose. If possible, determine which joint is causing the noise and force some glue around the post and in the hole. Stack some books on the seat overnight to serve as clamps while the glue dries. If you are lucky this may take care of it, but in extreme cases the chair may have to be taken apart, and reglued. P.S. If you can not get any glue in the hole, try a few drops of light oil. It will not cure the disease but it may eliminate the symptoms.</p></div>
+	</li>
+	<li class="faq"><a href="#">Should veneer be repaired before or after stripping?</a>
+		<div style="display:none"><p>Under most circumstances, it is safer to reglue loose veneer before applying stripper. Don't rinse with water as it dissolves the old veneer glues. Use lacquer thinner or denaturated alcohol instead.</p></div>
+	</li>
+	<li class="faq"><a href="#">What is the best means for removing a modern polyurethane finish?</a>
+		<div style="display:none"><p>Use a good quality paint-and-varnish remover and lots of it. Polyurethanes have a way of soaking up stripper, so don't start scrubbing it down with medium steel wool until it is loosened all the way to the wood. After the first coat is absorbed, apply another. It is a bit more costly, but otherwise you end up with part of the finish still on the wood when you start sanding.</p></div>
+	</li>
+	<li class="faq"><a href="#">What can I do about the tiny bumps I get in my finish after I varnish?</a>
+		<div style="display:none"><p>Those tiny little bumps are particles of dust, and if they are not coming from your brush or up out of the pores of the wood, then they are dropping down out of the air. Since there is no practical way you can completely avoid dust in the air, the final solution to your problem comes after the varnish has dried. After your first coat has hardened (no less than twenty-four hours later), buff the surface with dry #000 steel wool. Repeat this after the final coat, but with #0000 steel wool moistened with lemon oil.</p></div>
+	</li>
+</ul>
 {% endblock %}
