--- a/templates/403.html
+++ b/templates/403.html
@@ -11,11 +11,12 @@
 	</head>
 	<body bgcolor="#C1C1C1">
 		<div style="color:#FFFFFF;font-weight:bold;padding:100px;font-size:36px;">
-			Entrance Forbidden.<br><br>
+			403<br /><br />
+			Entrance Forbidden.<br /><br />
 			Entr&#xe9;e Interdite.
 		</div>
 		<div>
-			[ <a href="/home">Home | Acceuil</a> ]<br>
+			[ <a href="/home">Home | Acceuil</a> ]<br />
 			[ <a href="javascript:history.back()">Back | Retour</a> ]
 		</div>
 	</body>
