--- a/templates/404.html
+++ b/templates/404.html
@@ -11,11 +11,12 @@
 	</head>
 	<body bgcolor="#C1C1C1">
 		<div style="color:#FFFFFF;font-weight:bold;padding:100px;font-size:36px;">
-			The file you were searching for was not found on this server.<br><br>
+			404<br /><br />
+			The file you were searching for was not found on this server.<br /><br />
 			Le fichier que vous cherchiez n'a pas été trouvée sur ce serveur.
 		</div>
 		<div>
-			[ <a href="/home">Home | Acceuil</a> ]<br>
+			[ <a href="/home">Home | Acceuil</a> ]<br />
 			[ <a href="javascript:history.back()">Back | Retour</a> ]
 		</div>
 	</body>
