--- a/templates/500.html
+++ b/templates/500.html
@@ -11,12 +11,13 @@
 	</head>
 	<body bgcolor="#C1C1C1">
 		<div style="color:#FFFFFF;font-weight:bold;padding:100px;font-size:36px;">
-			Application Error.<br><br>
+			500<br /><br />
+			Application Error.<br /><br />
 			Erreur d'Application.
 		</div>
 		<div>
-			[ <a href="/home">Home | Acceuil</a> ]<br>
-			[ <a href="javascript:history.back()">Back | Retour</a> ]<br>
+			[ <a href="/home">Home | Acceuil</a> ]<br />
+			[ <a href="javascript:history.back()">Back | Retour</a> ]<br />
 			[ <a href="javascript:location.reload()">Reload | Recharger</a> ]
 		</div>
 	</body>
