--- a/templates/locations.html
+++ b/templates/locations.html
@@ -4,7 +4,7 @@
 <script type='text/javascript'>
 $(document).ready(function(){
 	$("#labela").click(function(){
-		$("#stuffa").toggle("slow");
+		$("#stuffa").toggle(showOrHide,"slow");
 	});
 });
 </script>
