--- a/templates/locations.html
+++ b/templates/locations.html
@@ -6,6 +6,12 @@ $(document).ready(function(){
 	$("#labela").click(function(){
 		$("#stuffa").fadeToggle("slow");
 	});
+	$("#labelb").click(function(){
+		$("#stuffb").fadeToggle("slow");
+	});
+	$("#labelc").click(function(){
+		$("#stuffc").fadeToggle("slow");
+	});
 });
 </script>
 {% endblock %}
