--- a/templates/locations.html
+++ b/templates/locations.html
@@ -21,10 +21,10 @@ $(document).ready(function(){
 {% block title %}Swing Paints - Locations{% endblock %}
 {% block category %}<img src="{{ url_for('static', filename='where_buy_top.png') }}" alt="Swing Paints Locations" width=590 height=29>{% endblock %}
 {% block content %}
-<div id="labela" style="margin: 0;width: 33%;float: left;text-align: center;">Canada</div>
-<div id="labelb" style="margin: 0;width: 33%;float: left;text-align: center;">Quebec</div>
-<div id="labelc" style="margin: 0;width: 33%;float: left;text-align: center;">Ontario</div>
-<div>
+<div id="labela" style="margin: 0;width: 33%;float: left;text-align: center;"><a href="#">Canada</a></div>
+<div id="labelb" style="margin: 0;width: 33%;float: left;text-align: center;"><a href="#">Quebec</a></div>
+<div id="labelc" style="margin: 0;width: 33%;float: left;text-align: center;"><a href="#">Ontario</a></div>
+<div style="font-size:10px;background: #eee;right: 0;bottom: 0;padding: 0.5em;border: 1px solid #000000;overflow-y:scroll;overflow: -moz-scrollbars-vertical;text-align:left;">
 <div id="stuffa"><table width="100%">
 							<tr>
 								<td>Canadian Tire</td>
